deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: tic-tac-toe
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: tic-tac-toe
#   template:
#     metadata:
#       labels:
#         app: tic-tac-toe
#     spec:
#       containers:
#         - name: tic-tac-toe
#           image: tkdocker123/tic-tac-toe:latest
#           ports:
#             - containerPort: 80


kind: Pod
apiVersion: v1
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  containers:
    - name: tic-tac-toe
      image: 'tkdocker123/tic-tac-toe:latest'
