service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: tic-tac-toe
# spec:
#   selector:
#     app: tic-tac-toe
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#   type: LoadBalancer


apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
spec:
  selector:
    app: tic-tac-toe
  ports:
    - port: 8080
