ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /tic-tac-toe
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 8080
